# tomoko

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LOG.md  MEMORY.md  Makefile  PLAN.md  PLAN.old.md  README.md  docker-compose.yml  pyproject.toml  signal.html  summary.md  task.acceptance.md  task.md  test_ollama.py  test_ollama2.py  test_ollama3.py  test_ollama4.py  test_ollama5.py  test_ollama6.py  test_ollama7.py
_docs/: evaluation.md  latency.md  n.md  thinkerv2.md  v2-2.md  v2-alpha.md  v2.md
_reference/: 2026-05-24-1200_設計評価と改善提案.md  test.m4a
_tools/: bench_audio_filters.py  bench_rnnoise_filter.py  bench_runtime_thinkfast_conversation.py  bench_short_reaction_mlx.py  bench_stt_backends.py  bench_supertonic_coreml_tts.py  bench_tts_backends.py  bench_tts_ready_prompt.py  download_models.py  monitor_dashboard.py  monitor_snapshot.py  normalize_tts_text_mlx.py  prepare_runtime.py  run_llm.sh  run_llm_stop.sh  run_voicevox.sh  smoke_maai_dialogue.py  smoke_maai_material.py  smoke_maai_tap_session.py  smoke_research_mcp_flow.py  smoke_research_tomoro_session_flow.py  smoke_timer_alarm_session_flow.py  smoke_ws_voice_latency.py  soak_stt_backends.py  soak_voice_stack_scenarios.py  summarize_pending_sessions.py  system_metrics.py  validate_world_observation_md.py  wait_runtime_dependencies.sh
asset-factory_for_work/: generate_tomoko_assets.py
background-process/: embed_conversation_turns.py  ingest_world_observations.py  run_journalist.py  run_thinker2.py  run_turn_taking_v2_worker.py  run_turn_taking_worker.py  run_v2_hot_path.py  run_v2_info.py  run_v2_summary.py  run_v2_think.py  run_v2_tomoko.py  run_v2_user_status.py  summarize_pending_sessions.py  update_persona_snapshots.py
client/: audio-worklet.js  index.html  main.js  styles.css
config/: central_realtime.toml  edge_kitchen.toml  v2.toml
docs/: latency.md
informations/: README.md
lora/: README.md  evaluate.py  generate_data.py  requirements.txt  train.sh
make-model/: MODEL_CARD.public-synthetic.md  PUBLIC_SYNTHETIC_PROVENANCE.md  README.md  benchmark_append_dedupe_latency.py  benchmark_saturation_latency.py  build_prefix_dataset.py  combine_teacher_labels.py  evaluate_append_dedupe_model.py  evaluate_saturation_model.py  extract_append_dedupe_seed_examples.py  generate_append_dedupe_synthetic_labels.py  generate_synthetic_saturation_corpus.py  generate_teacher_labels.py  make_anchor_teacher_labels.py  predict_append_dedupe.py  predict_saturation.py  prepare_japanese_daily_dialogue.py  (+3 more)
v1/: LOG.md  (+3 more)
(+574 files in other folders)
