[project]
name = "tomoko"
version = "0.1.0"
description = "Local voice conversation system with memory and personality."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "faster-whisper>=1.1.0",
    "numpy>=2.0.0",
    "ollama>=0.5.0",
    "psycopg[binary]>=3.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
mlx = [
    "mlx-lm>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: external dependencies are mocked or avoided; always run",
    "integration: requires local middleware or model runtimes",
    "perf: latency measurement tests for local runs",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["reference"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
